--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^16.8.4",
     "react-multi-carousel": "^2.4.2",
     "react-redux": "^6.0.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
